syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/valek177/chat-server/grpc/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc ConnectChat(ConnectChatRequest) returns (stream Message);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Message {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp created_at = 3;
}

message CreateChatRequest {
  string name = 1;
  repeated int64 user_ids = 2;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message ConnectChatRequest {
  int64 chat_id = 1;
  string username = 2;
}

message SendMessageRequest {
  int64 chat_id = 1;
  Message message = 2;
}
